src/test/ui/issue-35570.stderr
error: compilation successful
  --> $DIR/issue-35570.rs:38:1
   |
LL | / fn main() { //~ ERROR compilation successful
LL | |     takes_lifetime(foo);
LL | | }
   | |_^

error: aborting due to previous error

